# pavel

./: .dockerignore  .env  .env.example  .gitignore  CURRENT_DATA_SCHEMA.md  DATABASE_MANAGEMENT.md  DEPLOYMENT.md  Dockerfile  INSTALL.md  MONGODB_SETUP.md  Makefile  PROPOSED_STRUCTURE.md  QUICK_START.md  README.md  SYSTEM_STATUS.md  USAGE.md  VECTOR_SEARCH_SETUP.md  analyze_complaints.py  collect_reviews.py  deploy.sh  docker-compose.yml  go.mod  go.sum  ingest_app.py  mongo-init.js  pyproject.toml  requirements.txt  search_reviews.py  temp_ingest_script.py  test_all_fields.py  test_locale_script.py  test_new_app_locale.py  test_requirements.py  test_review_fields.py  vector_index.json
.github/workflows/: labeling.yml
applications/cli/: main.py
deployment/docker/: docker-compose.yml
docs/schemas/: README.md  mongodb_schema.js  schema_validation.js
internal/embedder/: embedder.go
internal/scraper/: googleplay.go
internal/storage/: postgres.go
migrations/: 001_init.sql
scripts/: analyze_topics.py  requirements.txt
src/pavel/: __init__.py
src/pavel/classification/: __init__.py  complaint_classifier.py
src/pavel/clustering/: __init__.py  anomaly_classifier.py  clustering_detector.py  detection_pipeline.py  dynamic_cluster_detector.py  semantic_detector.py  smart_detection_pipeline.py  statistical_detector.py  temporal_detector.py
src/pavel/core/: __init__.py  app_config.py  config.py  logger.py
src/pavel/embeddings/: __init__.py  embedding_generator.py  embedding_pipeline.py  semantic_search.py  vector_store.py
src/pavel/ingestion/: __init__.py  batch_processor.py  google_play.py  rate_limiter.py  scheduler.py
src/pavel/preprocessing/: __init__.py  deduplicator.py  language_detector.py  normalizer.py  pipeline.py  (+1 more)
tests/: .gitignore  README.md
tests/integration/: test_integration_main.py  test_integration_real_data.py  test_stage3_with_classifier.py
tests/unit/: test_kazakh_detection_alternatives.py  test_language_detection_real.py  test_multilingual_extended.py  test_similarity_tuning.py  test_stage4.py  test_stage4_final.py
tools/: README.md  chatgpt_labeling.py  create_complaint_dataset.py  explore_fields.py  field_analysis_results.json  full_indrive_ingestion.py  run_with_gh_secret.sh  train_complaint_classifier.py
(+11 files in other folders)
